# cypari2

./: .cruft.json  .gitignore  .install-pari.sh  .travis-install-pari.sh  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  NEWS  README.md  README.rst  VERSION  environment-win.yml  environment.yml  meson.build  pyproject.toml  readthedocs-conda.yml  requirements.txt  setup.cfg  setup.py
.github/workflows/: dist.yml  main.yml  wheels.yml
autogen/: __init__.py  args.py  doc.py  generator.py  parser.py  paths.py  ret.py  template_paridecl.pxd
cypari2/: Py_SET_SIZE.h  __init__.py  closure.pxd  closure.pyx  convert.pxd  convert.pyx  custom_block.pyx  cypari.h  cypari2.py.in  declinl.pxi  gen.pxd  gen.pyx  handle_error.pxd  handle_error.pyx  meson.build  pari_compat.h  pari_instance.pxd  pari_instance.pyx  pari_long.pxd  paridecl.pxd  paridecl.pyx  paripriv.pxd  python_extra.h  stack.pxd  stack.pyx  string_utils.pxd  string_utils.pyx  threads.pxd  threads.pyx  types.pxd
docs/: Makefile
docs/source/: closure.rst  conf.py  convert.rst  gen.rst  handle_error.rst  index.rst  pari_instance.rst  stack.rst  threads.rst
tests/: meson.build  pari.desc  rundoctest.py  test.c  test.pyx  test_backward.py  test_integers.py  unittest_template
tests/unittests/: alltest.py  bern.py  bestappr.py  bit.py  characteristic.py  charpoly.py  chinese.py  contfrac.py  disc.py  ellanal.py  ellmodulareqn.py  factorint.py  galpol.py  gamma.py  idealappr.py  idealramgroups.py  isprime.py  lambert.py  lex.py  lindep.py  linear.py  list.py  log.py  mathnf.py  minim.py  minmax.py  modfun.py  modular.py  nfrootsof1.py  nfsplitting.py  norm.py  number.py  pol.py  polred.py  polylog.py  prec.py  prime.py  primes.py  qfb.py  qfbclassno.py  (+11 more)
