[build-system]
requires = [
    "meson-python>=0.15.0",
    "Cython>=3.0",
    "cysignals>=1.11.3",
    "meson>=1.1.0",
    "ninja",
    "pkg-config",
]
build-backend = "mesonpy"

[project]
name = "cypari2"
description = "A Python interface to the number theory library PARI/GP"
authors = [
    {name = "Luca De Feo, Vincent Delecroix, Jeroen Demeyer, Vincent Klein"},
]
maintainers = [
    {name = "SageMath developers", email = "sage-devel@googlegroups.com"},
]
dependencies = [
    "cysignals>=1.11.3",
]
requires-python = ">=3.9"
readme = "README.rst"
license = {text = "GNU General Public License, version 2 or later"}
keywords = ["PARI/GP number theory"]
dynamic = [
    "version",
]

[project.urls]
Homepage = "https://github.com/sagemath/cypari2"


