[build-system]
requires = ["meson-python>=0.18.0", "cython>=3.0", "cysignals>=1.11.3"]
build-backend = "mesonpy"

[project]
name = "cypari2"
description = "A Python interface to the number theory library PARI/GP"
authors = [
    { name = "Luca De Feo, Vincent Delecroix, Jeroen Demeyer, Vincent Klein" },
]
maintainers = [
    { name = "SageMath developers", email = "sage-devel@googlegroups.com" },
]
dependencies = ["cysignals>=1.11.3"]
requires-python = ">=3.9"
readme = "README.rst"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
keywords = ["PARI/GP number theory"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/sagemath/cypari2"
