[build-system]
requires = ["meson-python>=0.18.0", "cython>=3.0", "cysignals>=1.11.3"]
build-backend = "mesonpy"

[project]
name = "cypari2"
description = "A Python interface to the number theory library PARI/GP"
authors = [
    { name = "Luca De Feo, Vincent Delecroix, Jeroen Demeyer, Vincent Klein" },
]
maintainers = [
    { name = "SageMath developers", email = "sage-devel@googlegroups.com" },
]
dependencies = ["cysignals>=1.11.3"]
requires-python = ">=3.12"
readme = "README.rst"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
keywords = ["PARI/GP number theory"]
dynamic = ["version"]

[project.entry-points.pkg_config]
cysignals = 'cysignals'

[project.urls]
Homepage = "https://github.com/sagemath/cypari2"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "cibuildwheel>=2.23.3",
    "cython>=3.1.4",
    "meson>=1.9.0",
    "meson-python>=0.18.0",
    "ninja>=1.13.0",
    "pkgconf>=2.4.3.post2",
    "pytest>=8.4.2",
]
doc = [
    "sphinx",
]

[tool.cibuildwheel]
skip = ["*-win32", "cp314t-*"]
test-groups = ["dev"]
test-sources = ["tests", "pyproject.toml"]
test-command = "python tests/rundoctest.py"
build-frontend = "build[uv]"
build-verbosity = 1
before-all = "bash -x {package}/.install-pari.sh"
environment-pass = ["CI", "GITHUB_ACTIONS"]
[tool.cibuildwheel.macos]
before-all = "brew install pari"
